[tool.poetry]
name = "science-fiction-books"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "science_fiction_books"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
bs4 = "^0.0.1"
xlsxwriter = "^3.0.6"
pandas = "^1.5.2"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
